force-app/main/default/objects/AcctPlanProdStrategy__c/AcctPlanProdStrategy__c.object-meta.xml
<CustomObject>
    <label>Account Plan Product Strategy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Product Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Product Strategy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>