force-app/main/default/objects/AcctPlanProdStrategy__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>เอาไว้ใช้เก็บ Account เพื่อเอาไป Select Performance ง่ายๆ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>