force-app/main/default/objects/AcctPlanProdStrategy__c/fields/AccountPlanYear__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanYear__c</fullName>
    <label>AccountPlanYear</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>