force-app/main/default/objects/AcctPlanProdStrategy__c/fields/AcctPlanCompanyProfileID__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanCompanyProfileID__c</fullName>
    <label>AcctPlanCompanyProfileID</label>
    <referenceTo>AcctPlanCompanyProfile__c</referenceTo>
    <relationshipLabel>Account Plan Product Strategy</relationshipLabel>
    <relationshipName>Account_Plan_Product_Strategy</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>