force-app/main/default/objects/AcctPlanProdStrategy__c/fields/AcctPlanGroupProfileID__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanGroupProfileID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcctPlanGroupProfileID</label>
    <referenceTo>AcctPlanGroupProfile__c</referenceTo>
    <relationshipLabel>Account Plan Product Strategy</relationshipLabel>
    <relationshipName>Account_Plan_Product_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>