force-app/main/default/objects/AcctPlanProdStrategy__c/fields/Adjust_NI__c.field-meta.xml
<CustomField>
    <fullName>Adjust_NI__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Adjusted NI (12-mth Rolling)</description>
    <inlineHelpText>Adjusted NI (12-mth Rolling)</inlineHelpText>
    <label>Adjusted NI (12-mth Rolling)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>