force-app/main/default/objects/AcctPlanProdStrategy__c/fields/AnnualizedPerformance__c.field-meta.xml
<CustomField>
    <fullName>AnnualizedPerformance__c</fullName>
    <description>Accumulated Actual NI for the past 12 months</description>
    <inlineHelpText>Accumulated Actual NI for the past 12 months</inlineHelpText>
    <label>Actual NI (12-mth Rolling)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>