force-app/main/default/objects/AcctPlanProdStrategy__c/fields/AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AsOfDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Last Refresh datetime</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AsOfDate</label>
    <type>Date</type>
</CustomField>