force-app/main/default/objects/AcctPlanProdStrategy__c/fields/AspirationSOW__c.field-meta.xml
<CustomField>
    <fullName>AspirationSOW__c</fullName>
    <defaultValue>0</defaultValue>
    <description>% share of wallet which RM expects to get on the fiscal year</description>
    <inlineHelpText>% share of wallet which RM 
expects to get on the fiscal year</inlineHelpText>
    <label>Aspiration SOW</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>