force-app/main/default/objects/AcctPlanProdStrategy__c/fields/CompareSOW__c.field-meta.xml
<CustomField>
    <fullName>CompareSOW__c</fullName>
    <description>Compare % Aspiration SOW and % Expected SOW</description>
    <formula>ExpectedSOWPercent__c  -  AspirationSOW__c</formula>
    <inlineHelpText>Compare % Aspiration SOW 
and % Expected SOW</inlineHelpText>
    <label>CompareSOW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>