force-app/main/default/objects/AcctPlanProdStrategy__c/fields/ExpectedIncrementalNI__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalNI__c</fullName>
    <description>Expected amount of incremental NI in THB</description>
    <formula>if( SEQ__c == 9.00 || SEQ__c == 13.00 || SEQ__c == 14.00 || SEQ__c == 3.00 ,
      BLANKVALUE(ExpectedIncrementalNIFreeText__c ,0)


,((AspirationSOW__c - ExistingSOW__c ) * WalletSizing__c) / 100)</formula>
    <inlineHelpText>Expected amount of incremental NI in THB</inlineHelpText>
    <label>Expected Incremental NI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>