force-app/main/default/objects/AcctPlanProdStrategy__c/fields/ExpectedIncrementalNIFromStep5__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIncrementalNIFromStep5__c</fullName>
    <description>Expected amount of incremental NI in THB as calculated from Step 5&apos;s NI projections</description>
    <inlineHelpText>Expected amount of incremental NI in THB
as calculated from Step 5&apos;s NI projections</inlineHelpText>
    <label>ExpectedIncrementalNIFromStep5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>