force-app/main/default/objects/AcctPlanProdStrategy__c/fields/ExpectedSOWPercent__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSOWPercent__c</fullName>
    <description>% expected share of wallet</description>
    <formula>ROUND(
if(WalletSizing__c == 0,0,  TotalCompanyNI__c   /  WalletSizing__c) * 100 ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% expected share of wallet</inlineHelpText>
    <label>ExpectedSOWPercent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>