force-app/main/default/objects/AcctPlanProdStrategy__c/fields/ParentRecord__c.field-meta.xml
<CustomField>
    <fullName>ParentRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentRecord</label>
    <referenceTo>AcctPlanProdStrategy__c</referenceTo>
    <relationshipName>Account_Plan_Prod_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>