force-app/main/default/objects/AcctPlanProdStrategy__c/fields/TotalCompanyNI__c.field-meta.xml
<CustomField>
    <fullName>TotalCompanyNI__c</fullName>
    <description>Total Company NI</description>
    <formula>Adjust_NI__c  +  ExpectedIncrementalNIFromStep5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Company NI</inlineHelpText>
    <label>TotalCompanyNI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>