force-app/main/default/objects/AcctPlanProdStrategy__c/fields/WalletFieldName__c.field-meta.xml
<CustomField>
    <fullName>WalletFieldName__c</fullName>
    <description>เอาไว้บอกที่มาของ  Field  ใน Wallet   &gt;&gt;  wallet.get(template.WalletFieldName)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>WalletFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>