force-app/main/default/objects/AcctPlanProdStrategy__c/fields/WalletSizing__c.field-meta.xml
<CustomField>
    <fullName>WalletSizing__c</fullName>
    <description>Amount of Wallet amount as calculated from Step 3 or from Customer Single View (if Step 3 is skipped)</description>
    <inlineHelpText>Amount of Wallet amount as calculated from Step 3 
or from Customer Single View (if Step 3 is skipped)</inlineHelpText>
    <label>Wallet Sizing (Yearly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>